--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0 -p 8080",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start -H 0.0.0.0 -p 3002"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@edge-runtime/vm": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@jest/globals": "latest",
+    "@prisma/client": "^6.12.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "latest",
     "@radix-ui/react-aspect-ratio": "latest",
@@ -44,12 +48,14 @@
     "@testing-library/react": "latest",
     "@testing-library/user-event": "latest",
     "@types/debug": "latest",
+    "@types/nodemailer": "^6.4.17",
     "@vitest/browser": "latest",
     "@vitest/ui": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "latest",
+    "crypto": "^1.0.1",
     "date-fns": "4.1.0",
     "embla-carousel-react": "latest",
     "happy-dom": "latest",
@@ -58,6 +64,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "nodemailer": "^7.0.5",
     "react": "^19",
     "react-day-picker": "latest",
     "react-dom": "^19",
@@ -76,7 +83,9 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
+    "prisma": "^6.12.0",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
