Force npm usage in Vercel deployment
- Add explicit npm engines specification
- Configure npm ci for faster installs
- Add .vercelignore to exclude pnpm files
- Add Prisma generate to build process
- Force framework detection for Next.js

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
-  "installCommand": "npm install",
+  "installCommand": "npm ci",
   "buildCommand": "npm run build",
+  "framework": "nextjs",
   "build": {
     "env": {
-      "PRISMA_GENERATE_DATAPROXY": "true"
+      "PRISMA_GENERATE_DATAPROXY": "true",
+      "SKIP_ENV_VALIDATION": "true"
     }
   },
   "functions": {
