--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "prisma generate && next build",
     "dev": "next dev -H 0.0.0.0 -p 8080",
     "lint": "next lint",
-    "start": "next start -H 0.0.0.0 -p 3002"
+    "start": "next start -H 0.0.0.0 -p 3002",
+    "postinstall": "prisma generate"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
